--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build-android:
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
@@ -20,26 +20,22 @@ jobs:
         node-version: '18'
         cache: 'npm'
 
-    - name: Clean install
+    - name: Install dependencies
       run: |
-        npm ci
+        npm install
         npm install -g cordova
-        
-        # Temiz başlangıç
+
+    - name: Prepare Cordova project
+      run: |
         rm -rf platforms plugins
+        cordova platform add android
 
-    - name: Setup Android platform
+    - name: Build Debug APK
       run: |
-        cordova platform add android || true
-        # Platform zaten ekliyse devam et
-
-    - name: Build with Gradle directly
-      run: |
-        # Direkt Gradle ile build
         cd platforms/android
         chmod +x gradlew
         ./gradlew assembleDebug
-        
+
     - name: Upload APK artifact
       uses: actions/upload-artifact@v4
       with:
