--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,41 +3,25 @@ name: Build Cordova Android APK
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
 jobs:
   build-android:
     runs-on: ubuntu-latest
-
+    
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
+    - uses: actions/checkout@v4
+    
+    - uses: actions/setup-node@v4
       with:
         node-version: '18'
-        cache: 'npm'
-
-    - name: Install dependencies
-      run: |
-        npm install
-        npm install -g cordova
-
-    - name: Prepare Cordova project
-      run: |
-        rm -rf platforms plugins
-        cordova platform add android
-
-    - name: Build Debug APK
-      run: |
-        cd platforms/android
-        chmod +x gradlew
-        ./gradlew assembleDebug
-
-    - name: Upload APK artifact
-      uses: actions/upload-artifact@v4
+    
+    - run: npm install && npm install -g cordova
+    
+    - run: cordova platform add android
+    
+    - run: cordova build android --debug
+    
+    - uses: actions/upload-artifact@v4
       with:
         name: android-debug-apk
         path: platforms/android/app/build/outputs/apk/debug/*.apk
