--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Cordova Android APK
+name: Build Capacitor Android APK
 
 on:
   push:
@@ -9,31 +9,35 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
-    - uses: actions/setup-node@v4
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
       with:
         node-version: '20'
-
-    - name: Install Cordova
-      run: npm install -g cordova
 
     - name: Install project dependencies
       run: npm install
 
-    - name: Add Android platform (API 36)
-      run: cordova platform add android@latest
+    # Capacitor CLI global kurmaya gerek yok — proje içi çalışır.
 
-    - name: Run plugin-auto.sh (plugins from config.xml)
+    - name: Create Capacitor Android platform
       run: |
-        chmod +x ./plugin-auto.sh
-        ./plugin-auto.sh
+        npx cap add android
 
-    - name: Build APK (debug)
-      run: cordova build android --debug
+    - name: Copy Web Assets to Android
+      run: |
+        npx cap sync android
 
-    - uses: actions/upload-artifact@v4
+    - name: Build Android APK (debug)
+      run: |
+        cd android
+        ./gradlew assembleDebug
+
+    - name: Upload Android Debug APK
+      uses: actions/upload-artifact@v4
       with:
         name: android-debug-apk
-        path: platforms/android/app/build/outputs/apk/debug/*.apk
+        path: android/app/build/outputs/apk/debug/*.apk
         retention-days: 7
