--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,33 +1,48 @@
-name: Build Capacitor Android APK
+name: Build Android (Capacitor)
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ]
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Repo
+    - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Install Node
+    - name: Setup Node
       uses: actions/setup-node@v4
       with:
-        node-version: 20
+        node-version: 18
 
-    - name: Install Dependencies
+    - name: Install npm deps
       run: npm install
 
-    - name: Add Android Platform (only if missing)
+    - name: Initialize Capacitor if missing
       run: |
-        npx cap add android || true
+        if [ ! -f "capacitor.config.json" ]; then
+          npx cap init pdfreader com.pdfreader.app --web-dir=www --yes
+        fi
 
-    - name: Copy Web Files to Android
+    - name: Add Android platform if missing
+      run: |
+        if [ ! -d "android" ]; then
+          npx cap add android
+        fi
+
+    - name: Sync Project
       run: npx cap sync android
 
-    - name: Build Android Debug APK
+    - name: Setup Java
+      uses: actions/setup-java@v4
+      with:
+        distribution: 'temurin'
+        java-version: '17'
+
+    - name: Build APK (Debug)
       run: |
         cd android
         ./gradlew assembleDebug
@@ -35,6 +50,5 @@ jobs:
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
-        name: capacitor-debug-apk
-        path: android/app/build/outputs/apk/debug/*.apk
-        retention-days: 7
+        name: app-debug.apk
+        path: android/app/build/outputs/apk/debug/app-debug.apk
