--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,16 +36,21 @@ jobs:
     - name: Sync Project
       run: npx cap sync android
 
-    - name: Setup Java
+    - name: Setup Java (Force Java 17)
       uses: actions/setup-java@v4
       with:
-        distribution: 'temurin'
-        java-version: '17'
+        distribution: "temurin"
+        java-version: "17"
+
+    - name: Force Gradle to use Java 17
+      run: |
+        echo "org.gradle.java.home=$JAVA_HOME_17_X64" >> android/gradle.properties
+        cat android/gradle.properties
 
     - name: Build APK (Debug)
       run: |
         cd android
-        ./gradlew assembleDebug
+        ./gradlew assembleDebug --warning-mode all
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
