--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Android (Capacitor)
+name: Android Build
 
 on:
   push:
@@ -10,50 +10,42 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-    - name: Setup Node (Capacitor v7 requires Node >= 20)
-      uses: actions/setup-node@v4
-      with:
-        node-version: 20
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
 
-    - name: Install npm deps
-      run: npm install
+      - name: Set up Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
 
-    - name: Initialize Capacitor if missing
-      run: |
-        if [ ! -f "capacitor.config.json" ]; then
-          npx cap init pdfreader com.pdfreader.app --web-dir=www --yes
-        fi
+      - name: Install dependencies
+        run: npm ci
 
-    - name: Add Android platform if missing
-      run: |
-        if [ ! -d "android" ]; then
-          npx cap add android
-        fi
+      - name: Capacitor Sync
+        run: npx cap sync android
 
-    - name: Sync Project
-      run: npx cap sync android
+      # ⬇️ Burada otomatik ekleniyor
+      - name: Force Java 17 Toolchain
+        run: |
+          echo "JAVA_TOOLCHAIN_VERSION=17" >> android/gradle.properties
+          echo "org.gradle.jvmargs=-Xmx2048m" >> android/gradle.properties
+          echo "sourceCompatibility=17" >> android/gradle.properties
+          echo "targetCompatibility=17" >> android/gradle.properties
 
-    - name: Setup Java (Force Java 17)
-      uses: actions/setup-java@v4
-      with:
-        distribution: "temurin"
-        java-version: "17"
+      - name: Build Android Debug APK
+        run: |
+          cd android
+          chmod +x gradlew
+          ./gradlew assembleDebug
 
-    - name: Force Gradle to use Java 17
-      run: |
-        echo "org.gradle.java.home=$JAVA_HOME_17_X64" >> android/gradle.properties
-        cat android/gradle.properties
-
-    - name: Build APK (Debug)
-      run: |
-        cd android
-        ./gradlew assembleDebug --warning-mode all
-
-    - name: Upload APK
-      uses: actions/upload-artifact@v4
-      with:
-        name: app-debug.apk
-        path: android/app/build/outputs/apk/debug/app-debug.apk
+      - name: Upload APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-debug
+          path: android/app/build/outputs/apk/debug/app-debug.apk
