--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,65 +1,79 @@
-name: Hello Capacitor Android Build
+name: Build Capacitor Android APK
 
 on:
   push:
-    branches:
-      - main
-  workflow_dispatch:
+    branches: [ main ]
 
 jobs:
-  build:
+  build-android:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+    - name: Checkout
+      uses: actions/checkout@v4
 
-      - name: Node 20 kur
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
+    # ------------------------------
+    # Node 20 (Capacitor için zorunlu)
+    # ------------------------------
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: 20
 
-      - name: Java 17 kur
-        uses: actions/setup-java@v4
-        with:
-          distribution: "temurin"
-          java-version: "17"
+    # ------------------------------
+    # Java 17 (Android Gradle Plugin için zorunlu)
+    # ------------------------------
+    - name: Setup Java 17
+      uses: actions/setup-java@v4
+      with:
+        distribution: "temurin"
+        java-version: "17"
 
-      - name: Android SDK kur
-        uses: android-actions/setup-android@v3
+    # ------------------------------
+    # Proje bağımlılıkları
+    # ------------------------------
+    - name: Install NPM dependencies
+      run: |
+        npm install
 
-      - name: Hello Capacitor projesini oluştur
-        run: |
-          mkdir hello
-          cd hello
+    # ------------------------------
+    # Capacitor CLI global gereklidir
+    # ------------------------------
+    - name: Install Capacitor CLI
+      run: npm install -g @capacitor/cli
 
-          npm init -y
-          npm install @capacitor/core @capacitor/cli @capacitor/android
-
-          # capacitor.config.json
-          cat << 'EOF' > capacitor.config.json
-          {
-            "appId": "com.example.hello",
-            "appName": "Hello App",
-            "webDir": "www",
-            "bundledWebRuntime": false
-          }
-          EOF
-
-          # www
-          mkdir www
-          echo "<h1>Hello Capacitor!</h1>" > www/index.html
-
-      - name: Android ekle & build
-        working-directory: hello
-        run: |
+    # ------------------------------
+    # Android platformu yoksa ekle
+    # ------------------------------
+    - name: Add Android platform
+      run: |
+        if [ ! -d "android" ]; then
+          npm install @capacitor/android
           npx cap add android
-          npx cap sync android
-          cd android
-          ./gradlew assembleDebug
+        else
+          echo "Android platform already exists."
+        fi
 
-      - name: APK'yi artifact olarak yükle
-        uses: actions/upload-artifact@v4
-        with:
-          name: hello-capacitor-apk
-          path: hello/android/app/build/outputs/apk/debug/*.apk
+    # ------------------------------
+    # sync
+    # ------------------------------
+    - name: Capacitor Sync
+      run: npx cap sync android
+
+    # ------------------------------
+    # Android APK build
+    # ------------------------------
+    - name: Build Android Debug APK
+      run: |
+        cd android
+        ./gradlew assembleDebug
+
+    # ------------------------------
+    # APK Upload
+    # ------------------------------
+    - name: Upload Debug APK
+      uses: actions/upload-artifact@v4
+      with:
+        name: android-debug-apk
+        path: android/app/build/outputs/apk/debug/*.apk
+        retention-days: 7
