--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,68 +12,43 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
 
-    # ------------------------------
-    # Node 20 (Capacitor için zorunlu)
-    # ------------------------------
+    # NodeJS 20 (Capacitor için zorunlu)
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
         node-version: 20
 
-    # ------------------------------
-    # Java 17 (Android Gradle Plugin için zorunlu)
-    # ------------------------------
-    - name: Setup Java 17
+    # Java 21 (invalid source release: 21 hatasının kesin çözümü)
+    - name: Setup Java 21
       uses: actions/setup-java@v4
       with:
         distribution: "temurin"
-        java-version: "17"
+        java-version: "21"
 
-    # ------------------------------
-    # Proje bağımlılıkları
-    # ------------------------------
     - name: Install NPM dependencies
-      run: |
-        npm install
+      run: npm install
 
-    # ------------------------------
-    # Capacitor CLI global gereklidir
-    # ------------------------------
     - name: Install Capacitor CLI
       run: npm install -g @capacitor/cli
 
-    # ------------------------------
-    # Android platformu yoksa ekle
-    # ------------------------------
+    # Android platform yoksa ekle
     - name: Add Android platform
       run: |
         if [ ! -d "android" ]; then
           npm install @capacitor/android
           npx cap add android
-        else
-          echo "Android platform already exists."
         fi
 
-    # ------------------------------
-    # sync
-    # ------------------------------
     - name: Capacitor Sync
       run: npx cap sync android
 
-    # ------------------------------
-    # Android APK build
-    # ------------------------------
     - name: Build Android Debug APK
       run: |
         cd android
         ./gradlew assembleDebug
 
-    # ------------------------------
-    # APK Upload
-    # ------------------------------
     - name: Upload Debug APK
       uses: actions/upload-artifact@v4
       with:
         name: android-debug-apk
         path: android/app/build/outputs/apk/debug/*.apk
-        retention-days: 7
