--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,67 +3,60 @@ name: Build Capacitor Android APK
 on:
   push:
     branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   build-android:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: 20
+      # NodeJS 20 (Capacitor için gerekli)
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
 
-    - name: Setup Java 21
-      uses: actions/setup-java@v4
-      with:
-        distribution: "temurin"
-        java-version: "21"
+      # NPM bağımlılıkları
+      - name: Install dependencies
+        run: npm install
 
-    - name: Install NPM dependencies
-      run: npm install
+      # www/web/index.html giriş dosyası için build (Eğer herhangi bir build script'in yoksa atlayabilir)
+      - name: Build web assets
+        run: |
+          if [ -f package.json ]; then
+            if npm run | grep -q "build"; then
+              npm run build
+            else
+              echo "Build script yok, direkt www klasörü kullanılacak."
+            fi
+          fi
 
-    - name: Install Capacitor CLI
-      run: npm install -g @capacitor/cli
+      # Capacitor Android sync
+      - name: Sync Capacitor
+        run: npx cap sync android
 
-    - name: Add Android platform
-      run: |
-        if [ ! -d "android" ]; then
-          npm install @capacitor/android
-          npx cap add android
-        fi
+      # Java 17 (Android Gradle Plugin 8+ için zorunlu)
+      - name: Setup Java
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
 
-    - name: Capacitor Sync
-      run: npx cap sync android
+      # Gradle cache
+      - name: Setup Gradle cache
+        uses: gradle/actions/setup-gradle@v3
 
-    - name: Build Android Debug APK
-      run: |
-        cd android
-        ./gradlew assembleDebug
+      # Debug APK Build
+      - name: Build Debug APK
+        working-directory: android
+        run: ./gradlew assembleDebug
 
-    # ✔ SADECE GEREKLİ DOSYALARLA ZIP OLUŞTUR
-    - name: Prepare Project ZIP
-      run: |
-        mkdir project_export
-        cp -r android project_export/
-        cp -r www project_export/
-        cp capacitor.config.* project_export/ 2>/dev/null || true
-        cp package.json project_export/
-        cp package-lock.json project_export/
-        cd project_export
-        zip -r ../capacitor-android-project.zip .
-
-    - name: Upload Project ZIP
-      uses: actions/upload-artifact@v4
-      with:
-        name: capacitor-android-project
-        path: capacitor-android-project.zip
-
-    - name: Upload Debug APK
-      uses: actions/upload-artifact@v4
-      with:
-        name: android-debug-apk
-        path: android/app/build/outputs/apk/debug/*.apk
+      # APK'yı artefact olarak yükle
+      - name: Upload APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-debug
+          path: android/app/build/outputs/apk/debug/app-debug.apk
