--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Capacitor Android APK
+name: Build Capacitor Android APK (Full Report)
 
 on:
   push:
@@ -13,13 +13,6 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    # 🔥 JAVA İLK GELMELİ (EN ÖNEMLİ ADIM)
-    - name: Setup Java (Temurin 17)
-      uses: actions/setup-java@v4
-      with:
-        distribution: 'temurin'
-        java-version: 17
-
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
@@ -31,19 +24,22 @@ jobs:
     - name: Build Web App
       run: npm run build || true
 
-    # Capacitor sync
+    - name: Setup Java (Temurin 17)
+      uses: actions/setup-java@v4
+      with:
+        distribution: 'temurin'
+        java-version: 17
+
     - name: Sync Capacitor Android
       run: npx cap sync android
 
-    # Gradle’i çalıştırılabilir yap
     - name: Fix gradlew permissions
       run: chmod +x android/gradlew
 
-    # 🟩 Debug APK build
-    - name: Build Android Debug APK
+    - name: Build Android Debug APK (FULL REPORT)
       run: |
         cd android
-        ./gradlew assembleDebug
+        ./gradlew assembleDebug --stacktrace --info --scan
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
