--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,16 +1,15 @@
-name: Build Capacitor Android APK (Full Report)
+name: Build Capacitor Android APK
 
 on:
   push:
     branches: [ main ]
-  workflow_dispatch:
 
 jobs:
   build-android:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
+    - name: Checkout
       uses: actions/checkout@v4
 
     - name: Setup Node.js
@@ -18,37 +17,28 @@ jobs:
       with:
         node-version: 20
 
-    - name: Install npm dependencies
-      run: npm ci
+    - name: Install dependencies
+      run: npm install
 
-    - name: Build Web App
-      run: npm run build || true
+    # 🔥 Android platformu yoksa otomatik ekle
+    - name: Add Android platform
+      run: npx cap add android --skip-dependencies
 
-    - name: Setup Java (Temurin 17)
-      uses: actions/setup-java@v4
-      with:
-        distribution: 'temurin'
-        java-version: 17
+    # Web build
+    - name: Build web
+      run: npm run build
 
-    - name: Sync Capacitor Android
+    - name: Copy to Android
       run: npx cap sync android
 
-    # ☑️ GRADLE SCAN TAMAMEN KAPATMA
-    - name: Disable Gradle Scan
-      run: |
-        echo "gradle.scan.enabled=false" >> android/gradle.properties
-        echo "org.gradle.develocity.enabled=false" >> android/gradle.properties
-
-    - name: Fix gradlew permissions
-      run: chmod +x android/gradlew
-
-    - name: Build Android Debug APK (FULL REPORT)
+    # APK build
+    - name: Build APK
       run: |
         cd android
-        ./gradlew assembleDebug --stacktrace --info
+        ./gradlew assembleDebug
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
-        name: PDFReader-debug-apk
+        name: app-debug.apk
         path: android/app/build/outputs/apk/debug/app-debug.apk
