--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,30 +15,37 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: 20
+        node-version: 17
 
-    - name: Install dependencies
+    - name: Setup Java 21
+      uses: actions/setup-java@v4
+      with:
+        distribution: "temurin"
+        java-version: "17"
+
+    - name: Install NPM dependencies
       run: npm install
 
-    # 🔥 Android platformu yoksa otomatik ekle
+    - name: Install Capacitor CLI
+      run: npm install -g @capacitor/cli
+
     - name: Add Android platform
-      run: npx cap add android --skip-dependencies
-
-    # Web build
-    - name: Build web
-      run: npm run build
-
-    - name: Copy to Android
+      run: |
+        if [ ! -d "android" ]; then
+          npm install @capacitor/android
+          npx cap add android
+        fi
+    - name: Capacitor Sync
       run: npx cap sync android
 
-    # APK build
-    - name: Build APK
+    - name: Build Android Debug APK
       run: |
         cd android
         ./gradlew assembleDebug
 
-    - name: Upload APK
+
+    - name: Upload Debug APK
       uses: actions/upload-artifact@v4
       with:
-        name: app-debug.apk
-        path: android/app/build/outputs/apk/debug/app-debug.apk
+        name: android-debug-apk
+        path: android/app/build/outputs/apk/debug/*.apk
